--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
             <ul class="social">
                 <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="img/linkedin icon.svg" alt=""></a></li>
+                <li><a href=""><img src="img/linkedin-icon.svg" alt=""></a></li>
                 <li><a href=""><img src="img/medium.svg" alt=""></a></li>
                 <li><a href=""><img src="img/github.svg" alt=""></a></li>
                 <li><a href=""><img src="img/angellist.svg" alt=""></a></li>
