--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Mobile version</title>
 </head>
 <body>
+    <!-- HEADER SECTION -->
     <header>
         <nav>
             <a href="/" class="logo-wrapper">Welcome</a>
@@ -37,6 +38,7 @@
             <a href="#targetid" class="arrow-wrapper"><img src="img/arrow-down.png" alt=""></a>
         </section>
     </header>
+    <!-- WORKS SECTION -->
     <section class="works">
         <h2 id="targetid">My Recent Works</h2>
         <div class="wrapper">
@@ -126,6 +128,7 @@
             </div>
         </div>
     </section>
+    <!-- ABOUT SECTION -->
     <section class="about">
         <h2>About me</h2>
         <div class="p-wrapper">
@@ -179,6 +182,33 @@
                 </div>
             </div>
         </div>
-    </section>    
+    </section>
+    <!-- FOOTER SECTION -->
+    <section class="form">
+        <div class="left-col">
+            <h2>
+                I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+            </h2>
+        </div>
+        <div class="right-col">
+             <form action="https://formspree.io/f/mqknveor" method="post">
+                <input type="text" name="username" maxlength="30" placeholder="Full name" required>
+                <input type="email" name="useremail" placeholder="Email address" required>
+                <textarea name="usermessage" maxlength="500" placeholder="Enter text here" required></textarea>
+                <button class="btn-green" type="submit">Get in touch</button>
+             </form>
+        </div>
+    </section>
+    <footer>
+        <ul class="social">
+            <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
+            <li><a href=""><img src="img/linkedin-icon.svg" alt=""></a></li>
+            <li><a href=""><img src="img/medium.svg" alt=""></a></li>
+            <li><a href=""><img src="img/github.svg" alt=""></a></li>
+            <li><a href=""><img src="img/angellist.svg" alt=""></a></li>
+        </ul>
+        <a href="mailto:myemailhere@email.com">myemailhere@email.com</a>
+        <span class="line"></span>
+    </footer>
 </body>
 </html>
