--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
              </form>
         </div>
     </section>
+    <section class="illustration">
+        <img src="img/Frame-1.png" alt="">
+        <img src="img/Frame-2.png" alt="">
+        <img class="last" src="img/Frame.png" alt="">
+    </section>
     <footer>
         <ul class="social">
             <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
