Add all changed files

--- a/index.html
+++ b/index.html
@@ -8,35 +8,43 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Mobile version</title>
+    <title>Desktop version</title>
 </head>
 <body>
     <!-- HEADER SECTION -->
     <header>
-        <nav>
-            <a href="/" class="logo-wrapper">Welcome</a>
-            <div class="humburger-wrapper">
-                <img src="img/menu-icon.png" alt="">               
-            </div>
-        </nav>
-        <section class="banner-section">
-            <h1>
-                <span>Hey there. I’m Mariane</span>
-                <span>I’m a software developer</span>
-            </h1>
-            <p>
-                I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-                don’t hestiate to contact me.
-            </p>
-            <ul class="social">
-                <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="img/linkedin-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="img/medium.svg" alt=""></a></li>
-                <li><a href=""><img src="img/github.svg" alt=""></a></li>
-                <li><a href=""><img src="img/angellist.svg" alt=""></a></li>
-            </ul>
-            <a href="#targetid" class="arrow-wrapper"><img src="img/arrow-down.png" alt=""></a>
-        </section>
+        <img src="img/header-llustration-desktop.png" alt="">
+        <div class="sub-header">
+            <nav>
+                <a href="/" class="logo-wrapper">Welcome</a>
+                <div class="humburger-wrapper">
+                    <img src="img/menu-icon.png" alt="">               
+                </div>
+                <ul>
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <section class="banner-section">
+                <h1>
+                    <span>Hey there. I’m Mariane</span>
+                    <span>I’m a software developer</span>
+                </h1>
+                <p>
+                    I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                    don’t hestiate to contact me.
+                </p>
+                <ul class="social">
+                    <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
+                    <li><a href=""><img src="img/linkedin-icon.svg" alt=""></a></li>
+                    <li><a href=""><img src="img/medium.svg" alt=""></a></li>
+                    <li><a href=""><img src="img/github.svg" alt=""></a></li>
+                    <li><a href=""><img src="img/angellist.svg" alt=""></a></li>
+                </ul>
+                <a href="#targetid" class="arrow-wrapper"><img src="img/arrow-down.png" alt=""></a>
+            </section>
+        </div>        
     </header>
     <!-- WORKS SECTION -->
     <section class="works">
@@ -198,6 +206,11 @@
                 <button class="btn-green" type="submit">Get in touch</button>
              </form>
         </div>
+    </section>
+    <section class="illustration">
+        <img src="img/Frame-1.png" alt="">
+        <img src="img/Frame-2.png" alt="">
+        <img class="last" src="img/Frame.png" alt="">
     </section>
     <footer>
         <ul class="social">
