Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Desktop version</title>
+    <title>Portfolio- accessibility</title>
 </head>
 <body>
     <!-- HEADER SECTION -->
@@ -18,7 +18,7 @@
             <nav>
                 <a href="/" class="logo-wrapper">Welcome</a>
                 <div class="humburger-wrapper">
-                    <img src="img/menu-icon.png" alt="">               
+                    <img src="img/menu-icon.png" alt="menu icon">               
                 </div>
                 <ul>
                     <li><a href="">Portfolio</a></li>
@@ -36,13 +36,13 @@
                     don’t hestiate to contact me.
                 </p>
                 <ul class="social">
-                    <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
-                    <li><a href=""><img src="img/linkedin-icon.svg" alt=""></a></li>
-                    <li><a href=""><img src="img/medium.svg" alt=""></a></li>
-                    <li><a href=""><img src="img/github.svg" alt=""></a></li>
-                    <li><a href=""><img src="img/angellist.svg" alt=""></a></li>
+                    <li><a href=""><img src="img/twitter.svg" alt="twitter icon"></a></li>
+                    <li><a href=""><img src="img/linkedin-icon.svg" alt="linkedin icon"></a></li>
+                    <li><a href=""><img src="img/medium.svg" alt="medium icon"></a></li>
+                    <li><a href=""><img src="img/github.svg" alt="github icon"></a></li>
+                    <li><a href=""><img src="img/angellist.svg" alt="angrllist icon"></a></li>
                 </ul>
-                <a href="#targetid" class="arrow-wrapper"><img src="img/arrow-down.png" alt=""></a>
+                <a href="#targetid" class="arrow-wrapper"><img src="img/arrow-down.png" alt="arrow down"></a>
             </section>
         </div>        
     </header>
@@ -56,10 +56,10 @@
                     <h4>Multi-Post Stories</h4>
                     <h4>Gain+Glory</h4>
                     <ul>
-                        <li><a href="">Ruby on rails</a></li>
-                        <li><a href="">css</a></li>
-                        <li><a href="">JavaScript</a></li>
-                        <li><a href="">html</a></li>
+                        <li><a>Ruby on rails</a></li>
+                        <li><a>css</a></li>
+                        <li><a>JavaScript</a></li>
+                        <li><a>html</a></li>
                     </ul>
                     <a class="btn-green" href="">See Project</a>
                 </div>
@@ -70,10 +70,10 @@
                     <h4>Multi-Post Stories</h4>
                     <h4>Gain+Glory</h4>
                     <ul>
-                        <li><a href="">Ruby on rails</a></li>
-                        <li><a href="">css</a></li>
-                        <li><a href="">JavaScript</a></li>
-                        <li><a href="">html</a></li>
+                        <li><a>Ruby on rails</a></li>
+                        <li><a>css</a></li>
+                        <li><a>JavaScript</a></li>
+                        <li><a>html</a></li>
                     </ul>
                     <a class="btn-green" href="">See Project</a>
                 </div>
@@ -84,10 +84,10 @@
                     <h4>Multi-Post Stories</h4>
                     <h4>Gain+Glory</h4>
                     <ul>
-                        <li><a href="">Ruby on rails</a></li>
-                        <li><a href="">css</a></li>
-                        <li><a href="">JavaScript</a></li>
-                        <li><a href="">html</a></li>
+                        <li><a>Ruby on rails</a></li>
+                        <li><a>css</a></li>
+                        <li><a>JavaScript</a></li>
+                        <li><a>html</a></li>
                     </ul>
                     <a class="btn-green" href="">See Project</a>
                 </div>
@@ -98,10 +98,10 @@
                     <h4>Multi-Post Stories</h4>
                     <h4>Gain+Glory</h4>
                     <ul>
-                        <li><a href="">Ruby on rails</a></li>
-                        <li><a href="">css</a></li>
-                        <li><a href="">JavaScript</a></li>
-                        <li><a href="">html</a></li>
+                        <li><a>Ruby on rails</a></li>
+                        <li><a>css</a></li>
+                        <li><a>JavaScript</a></li>
+                        <li><a>html</a></li>
                     </ul>
                     <a class="btn-green" href="">See Project</a>
                 </div>
@@ -112,10 +112,10 @@
                     <h4>Multi-Post Stories</h4>
                     <h4>Gain+Glory</h4>
                     <ul>
-                        <li><a href="">Ruby on rails</a></li>
-                        <li><a href="">css</a></li>
-                        <li><a href="">JavaScript</a></li>
-                        <li><a href="">html</a></li>
+                        <li><a>Ruby on rails</a></li>
+                        <li><a>css</a></li>
+                        <li><a>JavaScript</a></li>
+                        <li><a>html</a></li>
                     </ul>
                     <a class="btn-green" href="">See Project</a>
                 </div>
@@ -126,10 +126,10 @@
                     <h4>Multi-Post Stories</h4>
                     <h4>Gain+Glory</h4>
                     <ul>
-                        <li><a href="">Ruby on rails</a></li>
-                        <li><a href="">css</a></li>
-                        <li><a href="">JavaScript</a></li>
-                        <li><a href="">html</a></li>
+                        <li><a>Ruby on rails</a></li>
+                        <li><a>css</a></li>
+                        <li><a>JavaScript</a></li>
+                        <li><a>html</a></li>
                     </ul>
                     <a class="btn-green" href="">See Project</a>
                 </div>
@@ -153,10 +153,10 @@
                     </div>
                     <h4>Languages</h4>
                     <ul>
-                        <li><a href="">JavaScript</a></li>
-                        <li><a href="">Ruby</a></li>
-                        <li><a href="">Html</a></li>
-                        <li><a href="">Css</a></li>
+                        <li><a>JavaScript</a></li>
+                        <li><a>Ruby</a></li>
+                        <li><a>Html</a></li>
+                        <li><a>Css</a></li>
                     </ul>
                 </div>
             </div>
@@ -167,11 +167,11 @@
                     </div>
                     <h4>Frameworks</h4>
                     <ul>
-                        <li><a href="">Bootstrap</a></li>
-                        <li><a href="">Ruby on rauls</a></li>
-                        <li><a href="">Rspec</a></li>
-                        <li><a href="">Capybara</a></li>
-                        <li><a href="">Selenium</a></li>
+                        <li><a>Bootstrap</a></li>
+                        <li><a>Ruby on rauls</a></li>
+                        <li><a>Rspec</a></li>
+                        <li><a>Capybara</a></li>
+                        <li><a>Selenium</a></li>
                     </ul>
                 </div>
             </div>
@@ -182,10 +182,10 @@
                     </div>
                     <h4>Skills</h4>
                     <ul>
-                        <li><a href="">JavaScript</a></li>
-                        <li><a href="">Ruby</a></li>
-                        <li><a href="">Html</a></li>
-                        <li><a href="">Css</a></li>
+                        <li><a>JavaScript</a></li>
+                        <li><a>Ruby</a></li>
+                        <li><a>Html</a></li>
+                        <li><a>Css</a></li>
                     </ul>
                 </div>
             </div>
@@ -214,14 +214,16 @@
     </section>
     <footer>
         <ul class="social">
-            <li><a href=""><img src="img/twitter.svg" alt=""></a></li>
-            <li><a href=""><img src="img/linkedin-icon.svg" alt=""></a></li>
-            <li><a href=""><img src="img/medium.svg" alt=""></a></li>
-            <li><a href=""><img src="img/github.svg" alt=""></a></li>
-            <li><a href=""><img src="img/angellist.svg" alt=""></a></li>
+            <li><a href=""><img src="img/twitter.svg" alt="twitter icon"></a></li>
+            <li><a href=""><img src="img/linkedin-icon.svg" alt="linkedin icon"></a></li>
+            <li><a href=""><img src="img/medium.svg" alt="medium icon"></a></li>
+            <li><a href=""><img src="img/github.svg" alt="github icon"></a></li>
+            <li><a href=""><img src="img/angellist.svg" alt="angrllist icon"></a></li>
         </ul>
         <a href="mailto:myemailhere@email.com">myemailhere@email.com</a>
         <span class="line"></span>
     </footer>
+  
+    
 </body>
 </html>
