Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     <img src="img/menu-icon.png" alt="menu icon">               
                 </div>
                 <ul>
-                    <li><a href="#targetid">Portfolio</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#form">Contact</a></li>
-                    <span>&times;</span>
-                    <span class="mob-l"></span>
+                    <li class="linkclass"><a href="#targetid">Portfolio</a></li>
+                    <li class="linkclass"><a href="#about">About</a></li>
+                    <li class="linkclass"><a href="#form">Contact</a></li>
+                    <li class="aa closeclass">&times;</li>
+                    <li class="aa mob-l"></li>
                 </ul>
             </nav>
             <section class="banner-section">
