Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -53,90 +53,7 @@
     <section class="works">
         <h2 id="targetid">My Recent Works</h2>
         <div class="wrapper">
-            <div class="work-item">
-                <div class="div-wrapper"></div>
-                <div class="bottom-part">
-                    <h4>Multi-Post Stories</h4>
-                    <h4>Gain+Glory</h4>
-                    <ul>
-                        <li><a>Ruby on rails</a></li>
-                        <li><a>css</a></li>
-                        <li><a>JavaScript</a></li>
-                        <li><a>html</a></li>
-                    </ul>
-                    <a class="btn-green" href="">See Project</a>
-                </div>
-            </div>
-            <div class="work-item">
-                <div class="div-wrapper"></div>
-                <div class="bottom-part">
-                    <h4>Multi-Post Stories</h4>
-                    <h4>Gain+Glory</h4>
-                    <ul>
-                        <li><a>Ruby on rails</a></li>
-                        <li><a>css</a></li>
-                        <li><a>JavaScript</a></li>
-                        <li><a>html</a></li>
-                    </ul>
-                    <a class="btn-green" href="">See Project</a>
-                </div>
-            </div>
-            <div class="work-item">
-                <div class="div-wrapper"></div>
-                <div class="bottom-part">
-                    <h4>Multi-Post Stories</h4>
-                    <h4>Gain+Glory</h4>
-                    <ul>
-                        <li><a>Ruby on rails</a></li>
-                        <li><a>css</a></li>
-                        <li><a>JavaScript</a></li>
-                        <li><a>html</a></li>
-                    </ul>
-                    <a class="btn-green" href="">See Project</a>
-                </div>
-            </div>
-            <div class="work-item">
-                <div class="div-wrapper"></div>
-                <div class="bottom-part">
-                    <h4>Multi-Post Stories</h4>
-                    <h4>Gain+Glory</h4>
-                    <ul>
-                        <li><a>Ruby on rails</a></li>
-                        <li><a>css</a></li>
-                        <li><a>JavaScript</a></li>
-                        <li><a>html</a></li>
-                    </ul>
-                    <a class="btn-green" href="">See Project</a>
-                </div>
-            </div>
-            <div class="work-item">
-                <div class="div-wrapper"></div>
-                <div class="bottom-part">
-                    <h4>Multi-Post Stories</h4>
-                    <h4>Gain+Glory</h4>
-                    <ul>
-                        <li><a>Ruby on rails</a></li>
-                        <li><a>css</a></li>
-                        <li><a>JavaScript</a></li>
-                        <li><a>html</a></li>
-                    </ul>
-                    <a class="btn-green" href="">See Project</a>
-                </div>
-            </div>
-            <div class="work-item">
-                <div class="div-wrapper"></div>
-                <div class="bottom-part">
-                    <h4>Multi-Post Stories</h4>
-                    <h4>Gain+Glory</h4>
-                    <ul>
-                        <li><a>Ruby on rails</a></li>
-                        <li><a>css</a></li>
-                        <li><a>JavaScript</a></li>
-                        <li><a>html</a></li>
-                    </ul>
-                    <a class="btn-green" href="">See Project</a>
-                </div>
-            </div>
+          
         </div>
     </section>
     <!-- ABOUT SECTION -->
@@ -229,6 +146,13 @@
         <a href="mailto:myemailhere@email.com">myemailhere@email.com</a>
         <span class="line"></span>
     </footer>
+
+    <div class="popup-background">
+        <div class="popup">
+            <span class="aa closeclass">&times;</span>
+            
+        </div>
+    </div>
   
     <script src="javascript/main.js"></script>
 </body>
