--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 <input id="email" type="email" name="useremail" placeholder="Email address" required>
                 <label for="textarea">Textarea</label>
                 <textarea id="textarea" name="usermessage" maxlength="500" placeholder="Enter text here" required></textarea>
+                <div class="errorclass">Please, enter email address in lowercase.</div>
                 <button class="btn-green" type="submit">Get in touch</button>
              </form>
         </div>
@@ -149,8 +150,7 @@
 
     <div class="popup-background">
         <div class="popup">
-            <span class="aa closeclass">&times;</span>
-            
+            <span class="aa closeclass">&times;</span>            
         </div>
     </div>
   
