--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
             <section class="banner-section">
                 <h1>
-                    <span>Hey there. I’m Mariane</span>
+                    <span>Hey there. I’m Bakhtiyor</span>
                     <span>I’m a software developer</span>
                 </h1>
                 <p>
@@ -39,11 +39,10 @@
                     don’t hestiate to contact me.
                 </p>
                 <ul class="social">
-                    <li><a href=""><img src="img/twitter.svg" alt="twitter icon"></a></li>
-                    <li><a href=""><img src="img/linkedin-icon.svg" alt="linkedin icon"></a></li>
-                    <li><a href=""><img src="img/medium.svg" alt="medium icon"></a></li>
-                    <li><a href=""><img src="img/github.svg" alt="github icon"></a></li>
-                    <li><a href=""><img src="img/angellist.svg" alt="angrllist icon"></a></li>
+                    <li><a href="https://twitter.com/Bakhtiyor_dev"><img src="img/twitter.svg" alt="twitter icon"></a></li>
+                    <li><a href="https://www.linkedin.com/in/baxtiyor-yusubaliev/"><img src="img/linkedin-icon.svg" alt="linkedin icon"></a></li>
+                    <li><a href="https://github.com/username-forGithub"><img src="img/github.svg" alt="github icon"></a></li>
+                    <li><a href="https://angel.co/u/yusubaliev-bakhtiyor"><img src="img/angellist.svg" alt="angrllist icon"></a></li>
                 </ul>
                 <a href="#targetid" class="arrow-wrapper"><img src="img/arrow-down.png" alt="arrow down"></a>
             </section>
@@ -138,11 +137,10 @@
     </section>
     <footer>
         <ul class="social">
-            <li><a href=""><img src="img/twitter.svg" alt="twitter icon"></a></li>
-            <li><a href=""><img src="img/linkedin-icon.svg" alt="linkedin icon"></a></li>
-            <li><a href=""><img src="img/medium.svg" alt="medium icon"></a></li>
-            <li><a href=""><img src="img/github.svg" alt="github icon"></a></li>
-            <li><a href=""><img src="img/angellist.svg" alt="angrllist icon"></a></li>
+            <li><a href="https://twitter.com/Bakhtiyor_dev"><img src="img/twitter.svg" alt="twitter icon"></a></li>
+            <li><a href="https://www.linkedin.com/in/baxtiyor-yusubaliev/"><img src="img/linkedin-icon.svg" alt="linkedin icon"></a></li>
+            <li><a href="https://github.com/username-forGithub"><img src="img/github.svg" alt="github icon"></a></li>
+            <li><a href="https://angel.co/u/yusubaliev-bakhtiyor"><img src="img/angellist.svg" alt="angrllist icon"></a></li>
         </ul>
         <a href="mailto:myemailhere@email.com">myemailhere@email.com</a>
         <span class="line"></span>
