--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       <div class="item">
         <div class="content">
           <div class="links">
-            <a href="https://github.com/username-forGithub/charthop-wordpress"><i class="fa-brands fa-github"></i></a>
-            <a data-title="The website on Free Tier. The load might be slow" href="http://simplesamplesite.rf.gd"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a target="_blank" href="https://github.com/username-forGithub/charthop-wordpress"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" data-title="The website on Free Tier. The load might be slow" href="http://simplesamplesite.rf.gd"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
           <h4><span>Chart</span><span>Hope</span></h4>
           <div class="h5wrapper">
@@ -125,8 +125,8 @@
       <div class="item">
         <div class="content">
           <div class="links">
-            <a href="https://github.com/username-forGithub/rails_budget_app"><i class="fa-brands fa-github"></i></a>
-            <a data-title="The website on Free Tier. The load might be slow" href="https://budget-1sn7.onrender.com/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a target="_blank" href="https://github.com/username-forGithub/rails_budget_app"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" data-title="The website on Free Tier. The load might be slow" href="https://budget-1sn7.onrender.com/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
           <h4><span>Budget</span><span>App</span></h4>
           <div class="h5wrapper">
@@ -138,8 +138,8 @@
       <div class="item">
         <div class="content">
           <div class="links">
-            <a href="https://github.com/username-forGithub/react_space"><i class="fa-brands fa-github"></i></a>
-            <a data-title="This is a react prototype website" href="https://reactspace-prototype.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a target="_blank" href="https://github.com/username-forGithub/react_space"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" data-title="This is a react prototype website" href="https://reactspace-prototype.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
           <h4><span>Space</span><span>Travel</span></h4>
           <div class="h5wrapper">
@@ -151,8 +151,8 @@
       <div class="item">
         <div class="content">
           <div class="links">
-            <a data-title="Username: dev, Password: 555" href="https://jms.1devserver.co.uk/"><i class="fa-brands fa-github"></i></a>
-            <a data-title="Username: dev, Password: 555" href="https://jms.1devserver.co.uk/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a target="_blank" data-title="Username: dev, Password: 555" href="https://jms.1devserver.co.uk/"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" data-title="Username: dev, Password: 555" href="https://jms.1devserver.co.uk/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
           <h4><span>Sustainable</span><span>Feed Solutions</span></h4>
           <div class="h5wrapper">
