--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
               
            </form>
           </div>
-          <div class="acontainer-linked-1"><a class="linkedin" href="https://www.linkedin.com/in/baxtiyor-yusubaliev/"><img src="images/socialicons/linkedor.png" alt=""></a></div>
-          <div class="acontainer-linked-2"><a class="linkedin" href="https://github.com/username-forGithub"><img src="images/socialicons/githubor.png" alt=""></a></div>
-          <div class="acontainer-linked-3"><a class="linkedin" href="mailto:harhil46@gmail.com"><img src="images/socialicons/email.png" alt=""></a></div>
-          <div class="acontainer-linked-4"><a class="linkedin" href="https://twitter.com/Bakhtiyor_dev"><img src="images/socialicons/twitter.png" alt=""></a></div>     
+          <div class="acontainer-linked-1"><a target="_blank" class="linkedin" href="https://www.linkedin.com/in/baxtiyor-yusubaliev/"><img src="images/socialicons/linkedor.png" alt=""></a></div>
+          <div class="acontainer-linked-2"><a target="_blank" class="linkedin" href="https://github.com/username-forGithub"><img src="images/socialicons/githubor.png" alt=""></a></div>
+          <div class="acontainer-linked-3"><a target="_blank" class="linkedin" href="mailto:harhil46@gmail.com"><img src="images/socialicons/email.png" alt=""></a></div>
+          <div class="acontainer-linked-4"><a target="_blank" class="linkedin" href="https://twitter.com/Bakhtiyor_dev"><img src="images/socialicons/twitter.png" alt=""></a></div>     
       </div>
     </div>
     <div class="reset">
