--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
         <span class="spannow">NOW</span>
       </div>
     </div>
-  </section>
-
-  
+  </section>  
   <section class="projects rrr">
     <div class="h2wrapper">
       <div class="half">
@@ -163,7 +161,7 @@
       </div>      
     </div>
   </section>
-  <secton class="contact">
+  <section class="contact">
     <div class="h2wrapper">
       <div class="half">
         <h2 class="">
@@ -198,7 +196,8 @@
       <button form="contactform" id="reset">Go</button>
   </div>
 
-  </secton>
+  </section>
+  <div class="mob">Comming soon</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
