--- a/index.html
+++ b/index.html
@@ -158,7 +158,36 @@
             <h5>Custom WP Theme</h5>
           </div>
         </div> 
-      </div>      
+      </div> 
+      
+      <div class="item">
+        <div class="content">
+          <div class="links">
+            <a target="_blank" data-title="Username: dev, Password: 555" href="https://ccf.1devserver.co.uk"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" data-title="Username: dev, Password: 555" href="https://ccf.1devserver.co.uk"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+          <h4><span>Car</span><span>Finance</span></h4>
+          <div class="h5wrapper">
+            <h5>HTML/CSS, JS</h5>
+            <h5>Custom WP Theme</h5>
+          </div>
+        </div> 
+      </div> 
+      
+      <div class="item">
+        <div class="content">
+          <div class="links">
+            <a target="_blank" data-title="Username: dev, Password: 555" href="https://sharples-davies.1devserver.co.uk/"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" data-title="Username: dev, Password: 555" href="https://sharples-davies.1devserver.co.uk/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+          <h4><span>Sharples</span><span>Devies</span></h4>
+          <div class="h5wrapper">
+            <h5>HTML/CSS, JS</h5>
+            <h5>Custom WP Theme</h5>
+          </div>
+        </div> 
+      </div>  
+
     </div>
   </section>
   <section class="contact">
