--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </span>
         </div>
         <div class="right1">
-          <h5>Front-End-developer</h5>
+          <h5>web-developer</h5>
           <span>
             Devised and created more than 30 modern custom responsive (wordpress) websites.
           </span>
@@ -65,10 +65,9 @@
           </span>
         </div>
         <div class="right2">
-          <h5>Microverse mentor,<br> Freelancer, Volunteer</h5>
+          <h5>Golang Developer<br> program student. Freelancer,</h5>
           <span>
-            Mentoring 15+ junior web developers, and providing technical support through code reviews.
-            Fixing bugs, errors and making changes to Prop44.com property website.
+            Learning and developing golang language programming. Making changes to Prop44.com property website.
           </span>
         </div>
         <div class="left3">
@@ -77,7 +76,7 @@
           </div>
         </div>
         <span class="span20">2020</span>    
-        <span class="span21">2021</span> 
+        <span class="span21">2022</span> 
         <span class="span22">2022</span>   
         <span class="span23">2023</span>
         <span class="spannow">NOW</span>
@@ -97,8 +96,32 @@
       <div class="item">
         <div class="content">
           <div class="links">
+            <a target="_blank" href="https://github.com/bakhtiyor-y/basic-microservice"><i class="fa-brands fa-github"></i></a>
+          </div>
+          <h4><span>Basic</span><span>microservice</span></h4>
+          <div class="h5wrapper">
+            <h5>Clean Architecture</h5>
+            <h5>Golang, Docker Compose, Postgres</h5>
+          </div>
+        </div> 
+      </div>
+      <div class="item">
+        <div class="content">
+          <div class="links">
+            <a target="_blank" href="https://github.com/bakhtiyor-y/Lesson_6/"><i class="fa-brands fa-github"></i></a>
+          </div>
+          <h4><span>CRUD</span><span>operations</span></h4>
+          <div class="h5wrapper">
+            <h5>Clean Architecture</h5>
+            <h5>Golang, Postgres</h5>
+          </div>
+        </div> 
+      </div>
+      <div class="item">
+        <div class="content">
+          <div class="links">
             <a target="_blank" href="https://github.com/username-forGithub/tutor_front_api.git"><i class="fa-brands fa-github"></i></a>
-            <a target="_blank" data-title="The website on Free Tier. The load might be slow" href="https://tutors-back-api.netlify.app"><i class="fa fa-arrow-up-right-from-square"></i></a>
+            <a target="_blank" data-title="The website on Free Tier. The load might be slow" href="https://github.com/username-forGithub/tutor_front_api.git" ><i class="fa fa-arrow-up-right-from-square"></i></a>
           </div>
           <h4><span>Tutors</span><span>Universe</span></h4>
           <div class="h5wrapper">
@@ -124,7 +147,7 @@
         <div class="content">
           <div class="links">
             <a target="_blank" href="https://github.com/username-forGithub/rails_budget_app"><i class="fa-brands fa-github"></i></a>
-            <a target="_blank" data-title="The website on Free Tier. The load might be slow" href="https://budget-1sn7.onrender.com/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a target="_blank" data-title="The website on Free Tier. The load might be slow" href="https://github.com/username-forGithub/rails_budget_app"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
           <h4><span>Budget</span><span>App</span></h4>
           <div class="h5wrapper">
