--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="content">
           <div class="links">
             <!-- <a target="_blank" href="https://github.com/username-forGithub/tutor_front_api.git"><i class="fa-brands fa-github"></i></a> -->
-            <a target="_blank" data-title="The website on Free Tier. The load might be slow" href="https://tutor-render-front.onrender.com" ><i class="fa fa-arrow-up-right-from-square"></i></a>
+            <a target="_blank" data-title="The website on Free Tier. To spin off the website it might take up to a minute." href="https://tutor-render-front.onrender.com" ><i class="fa fa-arrow-up-right-from-square"></i></a>
           </div>
           <h4><span>Tutors</span><span>Universe</span></h4>
           <div class="h5wrapper">
