--- a/index.html
+++ b/index.html
@@ -109,19 +109,7 @@
         </div> 
       </div>
 
-      <div class="item">
-        <div class="content">
-          <div class="links">
-            <!-- <a target="_blank" data-title="Username: dev, Password: 555" href="https://ccf.1devserver.co.uk"><i class="fa-brands fa-github"></i></a> -->
-            <a target="_blank" data-title="Username: dev, Password: 555" href="https://ccf.1devserver.co.uk"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-          </div>
-          <h4><span>Car</span><span>Finance</span></h4>
-          <div class="h5wrapper">
-            <h5>HTML/CSS, JS</h5>
-            <h5>Custom WP Theme</h5>
-          </div>
-        </div> 
-      </div> 
+      
 
       <div class="item">
         <div class="content">
@@ -140,13 +128,13 @@
       <div class="item">
         <div class="content">
           <div class="links">
-            <!-- <a target="_blank" data-title="Username: dev, Password: 555" href="https://jms.1devserver.co.uk/"><i class="fa-brands fa-github"></i></a> -->
-            <a target="_blank" data-title="Username: dev, Password: 555" href="https://jms.1devserver.co.uk/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a target="_blank" href="https://github.com/username-forGithub/rails_budget_app"><i class="fa-brands fa-github"></i></a>
+            <a target="_blank" data-title="Free instance types will spin down with inactivity. Can take up to a minute to spin up." href="https://budgetapp-9h5q.onrender.com/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
-          <h4><span>Sustainable</span><span>Feed Solutions</span></h4>
+          <h4><span>Budget &</span><span>Expense Manager</span></h4>
           <div class="h5wrapper">
             <h5>HTML/CSS, JS</h5>
-            <h5>Custom WP Theme</h5>
+            <h5>Ruby on Rails</h5>
           </div>
         </div> 
       </div>      
@@ -177,6 +165,20 @@
           </div>
         </div> 
       </div>
+
+      <div class="item">
+        <div class="content">
+          <div class="links">
+            <!-- <a target="_blank" data-title="Username: dev, Password: 555" href="https://ccf.1devserver.co.uk"><i class="fa-brands fa-github"></i></a> -->
+            <a target="_blank" data-title="Username: dev, Password: 555" href="https://ccf.1devserver.co.uk"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+          <h4><span>Car</span><span>Finance</span></h4>
+          <div class="h5wrapper">
+            <h5>HTML/CSS, JS</h5>
+            <h5>Custom WP Theme</h5>
+          </div>
+        </div> 
+      </div> 
 
     </div>
   </section>
